<resources>
    <string name="app_name">Super Mail</string>
    <string name="onboarding_slide1_title">Create an account</string>
    <string name="onboarding_slide1_subtitle">Title one here</string>
    <string name="onboarding_slide1_desc">Welcome onboard!!</string>
    <string name="onboarding_slide2_title">Login to your account</string>
    <string name="onboarding_slide2_subtitle">Title2 two here</string>
    <string name="onboarding_slide2_desc">String 2 slide.</string>
    <string name="onboarding_slide3_title">Login to your account </string>
    <string name="onboarding_slide3_subtitle">Title3 three here</string>
    <string name="onboarding_slide3_desc">String 3 side.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get started</string>
    <string name="setting">setting</string>
    <string name="sign_in">Sign In with Google</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="home_screen_title">Home</string>
    <string name="home_screen_text">Can\'t walk? then fly!</string>
    <string name="previous">Previous</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home">Home\n</string>
    <string name="search">Search\n</string>
    <string name="all_categories">Categories</string>
    <string name="add_missing_place">Place</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title"> signature</string>
    <string name="template">Templates</string>
    <string name="badge">Badges</string>
    <string name="schedule">Scheduling</string>
    <string name="notification">Notification</string>
    <string name="spark">Spark Cloud</string>
    <string name="Sound_">Sound Prefrences</string>
    <string name="security">Security</string>
    <string name="reedle">Reddle</string>
    <string name="help">Help </string>
    <string name="wnew">What\'s new?</string>
    <string name="support">Support</string>
    <string name="policy">Default reply actionPrivacy Policy</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="account">Spark account</string>
    <string name="subscription">Subscription</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="snack_bar_undo">Undo\n</string>
    <string name="snack_bar_text">Undo delete</string>
    <string name="no_image">No recent Searches</string>
    <string name="display">Display \"Sent with Supermail\" tagline</string>
    <string name="privacy">Privacy policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_id">390762603984-lbdjhgffolaq6eb6jemsljand6orptqs.apps.googleusercontent.com</string>
    <string name="collapsed_notification_title">collasped\n</string>
    <string name="collapsed_notification_info">collasped info\n</string>
    <string name="channel_name">channel\n</string>
    <string name="channel_description">description</string>
    <string name="service_label">label\n</string>
    <string name="service_name">service\n</string>
    <string name="move_to">Move to</string>
    <string name="suggestion">Suggestions</string>
    <string name="important">Important</string>
    <string name="spam">Spam</string>
    <string name="draft">Drafts</string>
    <string name="sent">Sent</string>
    <string name="trash">Trash</string>
    <string name="archive">Archive</string>
    <string name="toolbar">Personalize toolbar</string>
    <string name="personalise">Choose and arrange up to 6 actions that will appear on\n the toolbar</string>
    <string name="main_action">Main action</string>
    <string name="done">Done</string>
    <string name="tool_option">Toolbar</string>
    <string name="snooze">Snooze</string>
    <string name="unread">Unread</string>
    <string name="reply">Reply</string>
    <string name="more_option">Rearrange actions in the More menu</string>
    <string name="move">Move</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="Restore">Restore default settings</string>
    <string name="view">View Details</string>
    <string name="move_spam">Move Conversation</string>
    <string name="print">Print</string>
    <string name="pdf">Save as PDF</string>
    <string name="send_again">Send Again</string>
    <string name="aside">Set aside</string>
    <string name="verify">OAuth Verification Request</string>
    <string name="from">From</string>
    <string name="api">API OAuth Dev Verification</string>
    <string name="Api_Key" translatable="false">390762603984-a20fsia8kpnb64ff4def17qfn4riqcb0.apps.googleusercontent.com</string>
    <string name="reply_Auth">api-oauth-dev-verification-reply</string>
    <string name="To">To</string>
    <string name="mark_read">Mark as read</string>
    <string name="privacy_policy">https://doc-hosting.flycricket.io/supermail/ccbe63d1-4392-4cd2-a372-386169443225/privacy</string>
    <string name="later">Later today</string>
    <string name="afternoon" translatable="false">01:00 pm</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="morning" translatable="false">09:00 am</string>
    <string name="NextWeek">Next Week</string>
    <string name="pickDate">Pick date</string>
    <string name="send_notification">Send me a notification</string>
    <string name="changeEmail">Change email</string>
    <string name="Cards">Cards</string>
    <string name="priority">Priority</string>
    <string name="personal">Personal</string>
    <string name="newsletter">Newsletters</string>
    <string name="Pins">Pins</string>
    <string name="Seen">Seen</string>
    <string name="Cardsactions">Cards actions</string>
    <string name="features">Features</string>
    <string name="Newsenders">New senders</string>
    <string name="Tapofthebox">Tap of the box</string>
    <string name="Priority">Priority</string>
    <string name="Show_1_line">Show 1 line</string>
    <string name="Groupspoisition">Groups poisition</string>
    <string name="sick">Stick to Today</string>
    <string name="Groupemails">Group emails</string>
    <string name="AssignedtoMe">Assigned to Me</string>
    <string name="pins">Pinned</string>
    <string name="ColorMode">Color Mode</string>
    <string name="Setbybatterysaver">Set by battery saver</string>
    <string name="Lighttheme">Light theme</string>
    <string name="darktheme">Dark theme</string>
    <string name="match_system">Match system colours</string>
    <string name="Listpreview">List preview</string>
    <string name="DarkmodeinHTMLemails">Dark mode in HTML emails</string>
    <string name="Showavatars">Show avatars</string>
    <string name="clear_avtar">Clear avatar cache</string>
    <string name="allow_access_supermail">Super Mail would like to access your photos</string>
    <string name="allow_subText">Allow Super Mail to access photos on your device.</string>
    <string name="continue_">Continue</string>
    <string name="file">File</string>
    <string name="gallery">Gallery</string>
    <string name="Camera">Camera</string>
    <string name="inbox">Inbox</string>
    <string name="all_message">All Messages</string>
    <string name="private_email">Private email account</string>
    <string name="use_personal">Use it to add your work or personal email\\naddress,visible only to you</string>
    <string name="shared">Shared email account</string>
    <string name="allow_multiple_access">Allow multiple people to share access to an\\n email address and work together</string>
    <string name="chooseInbox">Choose Your Inbox Type</string>
    <string name="colorCoding">Color coding for Accounts</string>
    <string name="share_discuss">Share &amp; Discuss</string>
    <string name="Invite">Invite teammates to discuss specific email conversations.Ask questions,and keep\\neveryone in the loop.</string>
    <string name="discard">Discard</string>
    <string name="Inbox">Inbox</string>
    <string name="folders">Folders</string>
    <string name="drafts">Drafts</string>
    <string name="snoozed">Snoozed</string>
    <string name="EditList">Edit List</string>
    <string name="save_draft">Save this message as a draft?</string>
    <string name="notsent">This message has not been sent and contains unsaved changes.\nYou can save it as a draft to work on later.</string>
    <string name="Savedraft">Save draft</string>
    <string name="privateaccount">Private accounts</string>
    <string name="AddAccount">Add Account</string>
    <string name="signGoogle" translatable="false">Sign in with Google</string>
    <string name="defualtEmail">Default email Address</string>
    <string name="recent">Most Recent</string>
    <string name="colorcoding">Color coding</string>
    <string name="disable">Disable</string>
    <string name="toolbar_personalize">Personalize toolbar</string>
    <string name="email_options">When email is archived or deleted</string>
    <string name="Opennext">Open next</string>
    <string name="returnEmaillist">Return to email list</string>
    <string name="Openlinksin">Open links in</string>
    <string name="defualtBrowser">Default browser</string>
    <string name="Inapp">In-app</string>
    <string name="GateKeeper">GateKeeper</string>
    <string name="English">English</string>
    <string name="German">German</string>
    <string name="spanish">Spanish(Spain)</string>
    <string name="French">French</string>
    <string name="Italian">Italian</string>
    <string name="Japanese">Japanese</string>
    <string name="Portuguese">Portuguese</string>
    <string name="Russian">Russian</string>
    <string name="Chinese">Chinese</string>
    <string name="Ukrainian">Ukrainian</string>
    <string name="Notificationpreview">Notification preview</string>
    <string name="Fullpreview">Full preview</string>
    <string name="Primaryaction">Primary action</string>
    <string name="Markasread">Mark as read</string>
    <string name="Secondaryaction">Secondary action</string>
    <string name="loadremote">Load Remote Images</string>
    <string name="ProtectNotificationAction">Protect Notification Action</string>
    <string name="PasskeyLock">Passkey Lock</string>
    <string name="OpenHelpCenter">Open Help Center</string>
    <string name="Contactus">Contact us</string>
    <string name="Diagnostics">Diagnostics</string>
    <string name="LegalNotes">Legal Notes</string>
    <string name="ResyncAddressBook">Resync Address Book</string>
    <string name="Appversion">App version</string>
</resources>