<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Fragments.SmartFragment">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/hello_blank_fragment" >
        <TextView
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_toEndOf="@+id/team"
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cards"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:fontFamily="@font/medium"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/grey_regular"/>
        <RelativeLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:id="@+id/newsendr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority"
                    android:gravity="start|center"
                    android:checkMark="@drawable/check_mark"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/black_med"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"


                    />
            <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_below="@+id/newsendr"
                    android:id="@+id/personal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/personal"
                    android:checked="true"
                    android:gravity="start|center"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/black_med"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:checked="true"
                    android:layout_below="@+id/personal"
                    android:id="@+id/notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:gravity="start|center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/black_med"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_below="@+id/notification"
                    android:id="@+id/news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newsletter"
                    android:gravity="start|center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/black_med"
                    />
            <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_below="@+id/news"
                    android:id="@+id/pins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Pins"
                    android:gravity="start|center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/black_med"
                    />
            <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_below="@+id/pins"
                    android:id="@+id/sin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Seen"
                    android:gravity="start|center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/black_med"
                    />

        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


    <TextView
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/cardaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cardsactions"
            android:paddingStart="@dimen/_5sdp"
            android:paddingTop="@dimen/_2sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:fontFamily="@font/regular"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black_med"/>
    <TextView
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_alignParentEnd="true"
            android:id="@+id/disable"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark_read"
            android:layout_centerVertical="true"
            android:paddingStart="@dimen/_5sdp"
            android:background="@null"
            android:fontFamily="@font/medium"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/colorPurple"/>
</RelativeLayout>

</LinearLayout>